# new_project_template

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .templatesyncignore  CLAUDE.md  Claude.md  DEPLOYMENT_GUIDE.md  LICENSE  LICENSE.SDK  MANIFEST.in  NEW_TEAM_MEMBER.md  NOTICE  README.md  README_SYNC.md  TEMPLATE_REORGANIZATION_SUMMARY.md  nexus-specialist.md  pyproject.toml
.claude/agents/: README.md  documentation-validator.md  framework-advisor.md  git-release-specialist.md  gold-standards-validator.md  intermediate-reviewer.md  pattern-expert.md  requirements-analyst.md  sdk-navigator.md  tdd-implementer.md  todo-manager.md  ultrathink-analyst.md
.github/: CODEOWNERS  branch-protection-rules.md  template-setup.yml
.github/workflows/: README.md  cd.yml  ci.yml  cleanup-deployments.yml  docs-check.yml  docs-deploy.yml  full-test.yml  notify-downstream-repos.yml  push-template-updates.yml  security-report.yml  security.yml  sync-from-template.yml  sync-project-workflows.yml  sync-sdk-users.yml  sync-to-downstream.yml  template-cleanup.yml  template-init.yml  template-sync-check.yml  unified-ci.yml
adr/: README.md
apps/: APP_DEVELOPMENT_GUIDE.md  CLAUDE.md  DOCUMENTATION_STANDARDS.md  README.md  __init__.py
apps/_template/: README.md  __init__.py  config.py  manifest.yaml  setup.py
apps/ai_registry/: README.md  __init__.py  __main__.py  app.py  cli.py  config.py  indexer.py  mcp_server.py  node_registry.py  pyproject.toml  requirements.txt
apps/ai_registry/adr/: README.md
apps/ai_registry/data/: api_aggregator_config.yaml  app_config.yaml  iot_processor_config.yaml  server_config.yaml  sharepoint_config.yaml
apps/ai_registry/deployment/infrastructure/: init_database.sql  nginx.conf  prometheus.yml
apps/ai_registry/docs/: APP_ARCHITECTURE.md  IMPLEMENTATION.md  MODEL_PERFORMANCE_ANALYSIS.md  README.md  TECHNICAL_REVIEW.md  TESTING_GUIDE.md  TEST_SUMMARY.md
apps/ai_registry/docs/api/: cache.rst  indexer.rst  nodes.rst  server.rst  tools.rst  workflows.rst
apps/ai_registry/docs/research/: advanced_rag_implementation.md  comprehensive_rag_techniques.md
apps/ai_registry/evaluation/: rag_evaluation_framework.py
apps/ai_registry/examples/: README.md  __init__.py  adding_prompts_example.py  agent_conversations.py  examples_enhanced_usage.py  examples_simple_usage.py  integration_patterns.py  quickstart.py  refactored_patterns_demo.py  test_advanced_rag_success.py  test_complete_app.py  validate_setup.py
apps/ai_registry/mistakes/: 000-master.md  README.md  template.md
apps/ai_registry/modules/analysis/: __init__.py  analysis_module.py
apps/ai_registry/modules/rag/: __init__.py  rag_module.py
apps/ai_registry/modules/registry/: __init__.py  registry_module.py
apps/ai_registry/modules/search/: __init__.py  search_module.py
apps/ai_registry/nodes/: __init__.py  chunking_nodes.py  evaluation_nodes.py  optimization_nodes.py  registry_analytics_node.py  registry_compare_node.py  registry_search_node.py  reranker_nodes.py  retrieval_nodes.py
apps/ai_registry/prd/: README.md
apps/ai_registry/rag/: __init__.py
apps/ai_registry/rag/agents/: __init__.py  document_analyzer.py
apps/ai_registry/rag/config/: __init__.py  model_config.py
apps/ai_registry/servers/: __init__.py  api_aggregator.py  iot_processor.py  sharepoint_connector.py
apps/ai_registry/tests/: __init__.py  test_core_functionality.py  test_enhanced_comprehensive.py  test_nodes.py  test_server.py  test_workflows.py
apps/ai_registry/todos/: 000-master.md  README.md  template.md
apps/ai_registry/workflows/: __init__.py  analysis_workflows.py  basic_search.py  domain_analysis.py  rag_workflows.py  search_workflows.py
apps/kailash-dataflow/: CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LEARNING_PATH.md  README.md  TESTING_ANALYSIS.md  dataflow_guidance_summary.md  pytest.ini  run_tests.sh  setup.py  validate_docs.py  validate_documentation.py
apps/kailash-mcp/: README.md  TEST_PLAN.md  pytest.ini
apps/kailash-nexus/: CLAUDE.md  CLAUDE_CODE_NAVIGATION_GUIDE.md  LEARNING_PATH.md  README.md  nexus_guidance_summary.md  test_nexus_docs.py  validate_docs.py
apps/mcp_platform/: README.md  __init__.py  requirements-dev.txt  requirements.txt
apps/qa_agentic_testing/: README.md  __init__.py  setup.py
apps/studio/: CLAUDE.md  README.md  VERIFICATION_CHECKLIST.md  __init__.py  requirements.txt  setup.py
apps/user_management/: API_DOCUMENTATION.md  Dockerfile  Dockerfile.test  README.md  README_PARAMETER_INJECTION.md  __init__.py  cli.py  config.py  main.py  (+7 more)
core/: __init__.py  base_server.py  discovery.py
deployment/: README.md
docs/: TEMPLATE_SYNC_WORKFLOW.md  build_docs.py  requirements.txt  template-usage.md
guides/: README.md
infrastructure/: README.md
migrations/: README.md
mistakes/: CLAUDE.md  README.md  current-session-mistakes.md  template.md
prd/: 000-project_structure.md
reference/: README.md  sync-files-reference.md  template-sync.md
scripts/: MERGE_TEMPLATE_SYNC_README.md  PR_AND_TOPIC_SYNC_SUMMARY.md  TEMPLATE_SYNC_GUIDE.md  cleanup_all_downstream_repos.sh  cleanup_duplicate_template_sync_prs.sh  cleanup_failed_sync_attempts.sh  cleanup_template_prs.py  cleanup_template_sync_branches.py  create_claude_fix_pr.sh  create_module.py  emergency_fix_workflows.sh  fix_all_claude_md.py  fix_cbm_claude.sh  fix_claude_via_api.py  fix_downstream_workflows.py  force_template_sync.sh  force_update_claude_md.py  link-existing-repo.sh  manage_template_prs.py  manual_pr_cleanup_guide.md  merge_specific_repos_prs.py  merge_template_sync_prs.sh  remove_old_sync_workflows.py  rename_claude_files.py  setup_new_repo.py  sync_and_merge_all.sh  sync_repo_topics.py  sync_template.py  sync_version.py  trigger_template_sync.py  unsubscribe_notifications.py  update_branch_protection.py
sdk-users/: CLAUDE-archive.md  CLAUDE.md  CONSOLIDATION_IMPLEMENTATION.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  INFRASTRUCTURE_GUIDE.md  README.md  decision-matrix.md
solutions/: README.md
templates/: README.md
tests/: README.md  conftest.py  test_ci_setup.py
todos/: 000-master.md  README.md
(+909 files in other folders)
